--- a/SpringMvcExtended/src/webapp/WEB-INF/pages/edit.html
+++ b/SpringMvcExtended/src/webapp/WEB-INF/pages/edit.html
@@ -8,7 +8,13 @@
 <form th:method="PATCH" th:action="@{/users/{id}(id=${user.getId()})}" th:object="${user}">
     <label for="firstName">Enter FirstName: </label>
     <input type="text" th:field="*{firstName}" id="firstName">
-    <br/>
+
+    <label for="lastName">Enter LastName: </label>
+    <input type="text" th:field="*{lastName}" id="lastName">
+
+    <label for="age">Enter Age: </label>
+    <input type="text" th:field="*{age}" id="age">
+        <br/>
     <input type="submit" value="Update!"/>
 </form>
 </body>
