--- a/SpringMvcExtended/src/webapp/WEB-INF/pages/user.html
+++ b/SpringMvcExtended/src/webapp/WEB-INF/pages/user.html
@@ -7,6 +7,8 @@
 <body>
 <p th:text="${user.getId()}">VALUE</p>
 <p th:text="${user.getFirstName()}">VALUE</p>
+<p th:text="${user.getLastName()}">VALUE</p>
+<p th:text="${user.getAge()}">VALUE</p>
 <a th:href="@{/users/{id}/edit(id=${user.getId()})}">Edit</a>
 <form th:method="DELETE" th:action="@{/users/{id}(id=${user.getId()})}">
     <input type="submit" value="Delete"/>
