--- a/SpringMvcExtended/src/webapp/WEB-INF/pages/users.html
+++ b/SpringMvcExtended/src/webapp/WEB-INF/pages/users.html
@@ -7,6 +7,8 @@
 <body>
 <div th:each="user : ${users}">
     <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getFirstName()}">user</a>
+    <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getLastName()}">user</a>
+    <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getAge()}">user</a>
 </div>
 <br/>
 <hr/>
